# crypto-data-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.dbt/: .user.yml  profiles.yml
coin_data_project/: README.md  dbt_project.yml
coin_data_project/models/bronze/: bronze_coin.sql
coin_data_project/models/gold/: dim_coin.sql  dim_data.sql  fact_coin.sql  gold_everyday_market.sql  gold_growth_analysis.sql  top_10_coin.sql
coin_data_project/models/silver/: silver_coin.sql
coin_data_project/models/source/: source.yml
config/: airflow.cfg
dags/: extract_dag.py
src/extract/: extract_coin.py
src/load/: load_coin.py
src/load_to_s3/: load_s3.py
src/s3_to_postgre/: load_to_postgre.py
src/transform/: transform_coin.py
