[project]
name = "project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.1.7",
    "pyarrow",
    "boto3",
    "apache-airflow-providers-amazon",
    "apache-airflow-providers-postgres",
    "dbt-postgres>=1.10.0",
]
